// produto.proto
syntax = "proto3";

package catalogo;

service CatalogoService {
  rpc GetProduto (ProdutoRequest) returns (ProdutoResponse);
}

message ProdutoRequest {
  int32 produtoId = 1;
}

message ProdutoResponse {
  int32 id = 1;
  string nome = 2;
  double preco = 3;
  int32 quantidadeEstoque = 4;
}